@@ -1,4 +1,5 @@
 {{$NEXT}}
+- better work around exceptions in File::ChangeNotify
 
 1.05      2013-01-31 16:58:52 Europe/London
 - work around exceptions in File::ChangeNotify
